<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Intelligent Wifi Client</string>
    <string name="start_service_string">Start Service</string>
    <string name="stop_service_string">Stop Service</string>
    <string name="show_map_string">Show Map</string>
    <string name="location_string">Enter Location</string>
    <string name="viewrules_string">View Rules</string>
    <string name="addrules_string">Add New Rule</string>
    <string name="savelocation_string">Save Location</string>
    <string name="viewstats_string">View Stats</string>
    <string name="addlocationrules_string">Add Location Based Rule</string>
    <string name="addaccelerationrules_string">Add Acceleration Based Rule</string>
    <string name="addtimerules_string">Add Time Based Rule</string>
    <string name="save_location_string">Save Location</string>
    <string name="viewlocation_string">View Locations</string>
    <string name="locationnmae_string">Name Current Locations</string>
    <string name="addvelocityrules_string">Add Velocity Based Rule</string>

</resources>
