<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
        <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="Current GPS Latitude:" /> 
        <TextView
        android:id="@+id/latitude_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        
        </TableRow>
         
        
        <TableRow
		android:id="@+id/tableRow2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" >
        <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Current GPS Longitude:" />
        <TextView
        android:id="@+id/longitude_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp" />
   
        </TableRow>
        <TableRow 
        android:id="@+id/tableRow5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" >
        <EditText
        android:id="@+id/locationname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mapButton"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/locationnmae_string"
        android:inputType="textPostalAddress" >

        <requestFocus />
        </EditText>
        </TableRow>
        
        
        <TableRow 
        android:id="@+id/tableRow3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" >
        </TableRow>    
         
        <TableRow 
        android:id="@+id/tableRow6"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" >
        </TableRow>   
        
        <TableRow 
        android:id="@+id/tableRow8"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" >
        </TableRow>  
        
        <TableRow 
        android:id="@+id/tableRow4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" >
        
		<Button
		android:id="@+id/savelocationButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
		android:layout_centerVertical="true"
		android:text="@string/save_location_string" />   
        </TableRow>  
                
        </TableLayout>

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/location_string"
            android:inputType="textPostalAddress" />

        <Button
            android:id="@+id/mapButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:text="@string/show_map_string" />

</LinearLayout>